--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
-DATABASE_URL="postgresql://postgres.cionesefvpdhxkgyvbzu:%21%22%23SanderErKul12345@aws-0-eu-north-1.pooler.supabase.com:6543/postgres"
+
+# Connect to Supabase via connection pooling
+DATABASE_URL="postgresql://postgres.xdobdqztexomdmulbntq:slowpapi42069@aws-0-eu-north-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
+
+# Direct connection to the database. Used for migrations
+DIRECT_URL="postgresql://postgres.xdobdqztexomdmulbntq:slowpapi42069@aws-0-eu-north-1.pooler.supabase.com:5432/postgres"
