--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   },
   "dependencies": {
     "@prisma/client": "^6.7.0",
+    "@supabase/supabase-js": "^2.49.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "prisma": "^6.7.0"
   }
 }
